external prometheus/ingress/mongo-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mongo-metrics
  namespace: gcloud
  generation: 2
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: harness
  rules:
    - http:
        paths:
          - path: /mongo-metrics(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: mongodb-replicaset-chart-metrics
                port:
                  number: 9216
