external prometheus/ingress/postgres-ingress.yaml
# Source: harness/templates/monitoring/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: postgres-metrics
  namespace: gcloud
  annotations:
    nginx.ingress.kubernetes.io/whitelist-source-range: 34.170.35.199
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: "harness"
  rules:
    
    - host: ""
      http:
        paths:
          - backend:
              service:
                name: timescaledb-single-chart-prometheus
                port:
                  
                  number: 9187
            path: /postgres-metrics(/|$)(.*)
            pathType: ImplementationSpecific
